# GTKalculator

./: CMakeLists.txt  main.cpp
